--- a/public/index.html
+++ b/public/index.html
@@ -3,14 +3,14 @@
 
 <head>
   <meta charset="utf-8">
-  <title>Big Poppa Code Starter Kit</title>
+  <title>Anime Database</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="/css/styles.css">
-<link href="js/dist/vendors~App.style.00fdc2d0818c52fd5f75.css?de3fbc51cd7951982e16" rel="stylesheet"></head>
+<link href="js/dist/vendors~App.style.00fdc2d0818c52fd5f75.css?709d289a0afd277eeed5" rel="stylesheet"></head>
 
 <body>
   <div id="app"></div>
 
-<script type="text/javascript" src="js/dist/vendors~App.d7e63abf944b08b85066.js?de3fbc51cd7951982e16"></script><script type="text/javascript" src="js/dist/App.8118044f29eb03a884e2.js?de3fbc51cd7951982e16"></script><script type="text/javascript" src="js/dist/main.9c581f7864b02165cf18.js?de3fbc51cd7951982e16"></script></body>
+<script type="text/javascript" src="js/dist/vendors~App.d7e63abf944b08b85066.js?709d289a0afd277eeed5"></script><script type="text/javascript" src="js/dist/App.8118044f29eb03a884e2.js?709d289a0afd277eeed5"></script><script type="text/javascript" src="js/dist/main.9c581f7864b02165cf18.js?709d289a0afd277eeed5"></script></body>
 
 </html>
