--- a/public/index.html
+++ b/public/index.html
@@ -6,11 +6,14 @@
   <title>Anime Database</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="/css/styles.css">
-<link href="js/dist/vendors~App.style.00fdc2d0818c52fd5f75.css?7651ede490da8fdbaae4" rel="stylesheet"></head>
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@100&display=swap" rel="stylesheet">
+<link href="js/dist/vendors~App.style.00fdc2d0818c52fd5f75.css?b3a5151f8b742bf86c5a" rel="stylesheet"></head>
 
 <body>
   <div id="app"></div>
 
-<script type="text/javascript" src="js/dist/vendors~App.d7e63abf944b08b85066.js?7651ede490da8fdbaae4"></script><script type="text/javascript" src="js/dist/App.9e6a969736f1f44edce4.js?7651ede490da8fdbaae4"></script><script type="text/javascript" src="js/dist/main.9c581f7864b02165cf18.js?7651ede490da8fdbaae4"></script></body>
+<script type="text/javascript" src="js/dist/vendors~App.d7e63abf944b08b85066.js?b3a5151f8b742bf86c5a"></script><script type="text/javascript" src="js/dist/App.00c37530a08dc9cbc94c.js?b3a5151f8b742bf86c5a"></script><script type="text/javascript" src="js/dist/main.9c581f7864b02165cf18.js?b3a5151f8b742bf86c5a"></script></body>
 
 </html>
